# agreements-management

./: .env.example  README.md  pyproject.toml  requirements.txt
src/agreements/: config.py  main.py
src/agreements/a2a/: client.py
src/agreements/agents/creator/: executor.py  graph.py  server.py
src/agreements/agents/modifier/: executor.py  graph.py  server.py
src/agreements/agents/planner/: graph.py  prompts.py
src/agreements/agents/query/: executor.py  graph.py  server.py
src/agreements/database/: session.py
src/agreements/mcp_servers/: database_server.py  document_server.py  template_server.py
src/agreements/models/: agreement.py
tests/: test_mcp_servers.py  test_planner.py  test_specialist_agents.py
